Crash on BKE_sound_scene_playing due to Scene NULL #64183

Closed
opened 2019-05-05 22:08:27 +02:00 by Daniel Santana · 7 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-05 18:49, hash: 1dd78a3f57
Worked: (optional)

Short description of error
For some reason on some files, events pass a NULL scene to the BKE_sound_scene_playing, when loading a scene. This could be easily avoided with at least checking if the scene is NULL.

Exact steps for others to reproduce the error
Production file that cannot be shared :(.

Stack trace:
https://i.imgur.com/KNg19xH.jpg

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.39 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-05-05 18:49, hash: `1dd78a3f57` Worked: (optional) **Short description of error** For some reason on some files, events pass a NULL scene to the BKE_sound_scene_playing, when loading a scene. This could be easily avoided with at least checking if the scene is NULL. **Exact steps for others to reproduce the error** Production file that cannot be shared :(. Stack trace: https://i.imgur.com/KNg19xH.jpg
Author

Added subscriber: @dgsantana

Added subscriber: @dgsantana
Author

Just some extra info, running a debug build an assert is triggered that confirms that the scene is in some invalid state.
Trigger at line 3096 on "source\blender\windowmanager\intern\wm_event_system.c" during DEG_get_evaluated_scene. It's possible to recover the scene with a simple Append of the scene datablock in a new scene.
If I get this to reproduce on a simple scene, I will post it here.

Just some extra info, running a debug build an assert is triggered that confirms that the scene is in some invalid state. Trigger at line 3096 on "source\blender\windowmanager\intern\wm_event_system.c" during DEG_get_evaluated_scene. It's possible to recover the scene with a simple Append of the scene datablock in a new scene. If I get this to reproduce on a simple scene, I will post it here.
Author

Using the provided scene in https://developer.blender.org/T64181 causes the same assertion, with the same stack trace.

Using the provided scene in https://developer.blender.org/T64181 causes the same assertion, with the same stack trace.
Author

I was able to "fix" with this patch. It's hacky, and there may some other problem lurking somewhere else, but at least this avoids crashing.

diff --git a/source/blender/windowmanager/intern/wm_event_system.c b/source/blender/windowmanager/intern/wm_event_system.c
index a13b28b7853..3d0db7ec165 100644
--- a/source/blender/windowmanager/intern/wm_event_system.c
+++ b/source/blender/windowmanager/intern/wm_event_system.c
@@ -3095,7 +3095,7 @@ void wm_event_do_handlers(bContext *C)
       Scene *scene = WM_window_get_active_scene(win);
       Scene *scene_eval = DEG_get_evaluated_scene(depsgraph);

-      if (scene) {
+      if (scene && scene_eval) {
         const int is_playing_sound = BKE_sound_scene_playing(scene_eval);

         if (is_playing_sound != -1) {
I was able to "fix" with this patch. It's hacky, and there may some other problem lurking somewhere else, but at least this avoids crashing. ``` diff --git a/source/blender/windowmanager/intern/wm_event_system.c b/source/blender/windowmanager/intern/wm_event_system.c index a13b28b7853..3d0db7ec165 100644 --- a/source/blender/windowmanager/intern/wm_event_system.c +++ b/source/blender/windowmanager/intern/wm_event_system.c @@ -3095,7 +3095,7 @@ void wm_event_do_handlers(bContext *C) Scene *scene = WM_window_get_active_scene(win); Scene *scene_eval = DEG_get_evaluated_scene(depsgraph); - if (scene) { + if (scene && scene_eval) { const int is_playing_sound = BKE_sound_scene_playing(scene_eval); if (is_playing_sound != -1) { ```
Author
The bug was introduced in this commit: https://developer.blender.org/rBc5fe16e121eefe5dd02cc9f9ba572053c383ccfa
Sergey Sharybin was assigned by George Vogiatzis 2019-05-06 07:08:23 +02:00

This issue was referenced by 2e582f8ab5

This issue was referenced by 2e582f8ab53c7bcd9fabce8ec2b1d812ec28f58d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64183
No description provided.